# Chess-Engine

./: .gitignore  CMakeLists.txt  main.cpp  makefile
include/: basepiece.h  bishop.h  board.h  castlingRights.h  king.h  knight.h  move.h  pawn.h  piece.h  queen.h  rook.h  square.h
main.dSYM/Contents/Resources/DWARF/: main
src/: CMakeLists.txt  basepiece.cpp  bishop.cpp  board.cpp  castlingRights.cpp  king.cpp  knight.cpp  main.cpp  move.cpp  pawn.cpp  piece.cpp  queen.cpp  rook.cpp  square.cpp
tests/: CMakeLists.txt  tests.cpp
